<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BMICalculatorActivity"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/weightEditText"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:textAlignment="center"
        android:maxLength="5"
        android:hint="@string/bmi_placeholder_weight"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:textSize="18sp"
        android:textAlignment="center"
        android:text="@string/bmi_txt_setup_height" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="150dp"
        android:textAlignment="center"
        android:layout_marginBottom="-20dp"
        android:id="@+id/bmi_height_value"
        android:text="@string/bmi_height_placeholder"
        android:textSize="18sp" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="20dp"
        android:indeterminate="false"
        android:id="@+id/heightSeekBar"
        android:min="125"
        android:max="250"
        android:progress="175"
        android:layout_gravity="fill_horizontal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:textSize="18sp"
        android:textAlignment="center"
        android:text="@string/bmi_txt_your_bmi" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:textSize="18sp"
        android:textAlignment="center"
        android:text="@string/bmi_placeholder"
        android:id="@+id/bmi_value" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:textAlignment="center"
        android:id="@+id/bmi_summary" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="300dp"
        android:padding="12dp"
        android:id="@+id/btnOpenChartActivity"
        android:text="@string/btnChartActivity"
        />

</LinearLayout>